<resources>
    <string name="app_name">MarketAndroid</string>
    <string name="nongbu">농부</string>
    <string name="manager">관리자</string>
    <string name="list">등록 현황</string>
    <string name="add">물품 등록</string>
    <string name="option">설정</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="products">품종</string>
    <string name="weight">중량</string>
    <string name="total_price">총 가격</string>
    <string name="count">수량</string>
    <string name="user_name">유저이름</string>
    <string name="box">Box</string>
    <string name="won">원</string>
    <string name="kg">Kg</string>
    <string name="user_mode">유저 모드</string>
    <string name="manager_mode">관리자 모드</string>
    <string name="ok">등 록</string>
    <string name="cancel">취 소</string>
    <string name="sign_up_ok">가입하기</string>
</resources>