<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <RelativeLayout
        android:id="@+id/mg_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/mgrecycle_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mgrecycle_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mgrecycle_user_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/products"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/mgrecycle_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mgrecycle_user_name"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@+id/mgrecycle_products"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/mgrecycle_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mgrecycle_user_name"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@+id/mgrecycle_weight"
            android:text="@string/count"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/mgrecycle_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="17dp"
            android:layout_marginBottom="5dp"
            android:text="@string/total_price"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/mgrecycle_personal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/mgrecycle_total_price"
            android:text="(1Box 당 가격)"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/mgrecycle_call_btn"
            android:layout_width="95dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:background="@drawable/button_blue"
            android:text="전화\n걸기"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>