<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:id="@+id/mg_list_layout"
        android:layout_marginBottom="7dp">

        <ImageView
            android:id="@+id/nbrecycle_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/potato" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YYYY-MM-DD HH:mm:ss"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/nbrecycle_img"
            android:layout_marginLeft="17dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:id="@+id/nbrecycle_time"/>

        <TextView
            android:id="@+id/mgrecycle_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nbrecycle_time"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@+id/nbrecycle_img"
            android:text="@string/products"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mgrecycle_weight"
            android:layout_toRightOf="@+id/mgrecycle_products"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/nbrecycle_time"
            android:layout_marginTop="7dp"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mgrecycle_count"
            android:layout_toRightOf="@+id/mgrecycle_weight"
            android:text="@string/count"
            android:textColor="@color/black"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/nbrecycle_time"
            android:layout_marginTop="7dp"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/mgrecycle_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="17dp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/nbrecycle_img"
            android:layout_marginBottom="10dp"
            android:text="@string/total_price"/>

        <TextView
            android:id="@+id/mgrecycle_personal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/mgrecycle_total_price"
            android:layout_marginBottom="10dp"
            android:text="(1Box 당 가격)"/>

        <ImageView
            android:id="@+id/nbrecycle_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/option"
            app:tint="#000000" />

    </RelativeLayout>



</RelativeLayout>